--- a/index.html
+++ b/index.html
@@ -1,13 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta charset="" />
+    <meta name="viewport" content="width=, initial-scale=" />
+    <title>JavaScript Practice</title>
     <link rel="stylesheet" href="src/styles.css" />
-    <title>Document</title>
   </head>
   <body>
+    <main>
+      <div class="card">
+        <h3>JavaScript Practice</h3>
+        <button
+          type="button"
+          onclick="document.getElementById('demo').innerHTML = Date()"
+        >
+          First JS Button
+        </button>
+        <button
+          type="button"
+          onclick="document.getElementById('demo').innerHTML='changing date'"
+        >
+          change
+        </button>
+        <p id="demo"></p>
+      </div>
+    </main>
     <script src="src/index.js"></script>
   </body>
 </html>
