--- a/index.html
+++ b/index.html
@@ -24,6 +24,15 @@
         </button>
         <p id="demo"></p>
       </div>
+      <section class="imageChange">
+        <img
+          src="./img/chandra1.png"
+          type="button"
+          id="myImage"
+          onclick="document.getElementById('myImage').src='/img/pari.png'"
+          style="width: 100px; cursor: pointer;"
+        />
+      </section>
     </main>
     <script src="src/index.js"></script>
   </body>
