--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           src="./img/chandra1.png"
           type="button"
           id="myImage"
-          onclick="document.getElementById('myImage').src='/img/pari.png'"
+          onclick="this.src='/img/pari.png'"
           style="width: 100px; cursor: pointer;"
         />
       </section>
