--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
           style="width: 100px; cursor: pointer;"
         />
       </section>
+      <p id="demo3"></p>
     </main>
     <script src="src/index.js"></script>
   </body>
